--- a/Core2D/docs/Core2D/Component/Components/TransformComponent.html
+++ b/Core2D/docs/Core2D/Component/Components/TransformComponent.html
@@ -79,7 +79,7 @@ loadScripts(document, 'script');</script>
 </div>
 <div class="inheritance" title="Inheritance Tree">java.lang.Object
 <div class="inheritance"><a href="../Component.html" title="class in Core2D.ECS.Component">Core2D.ECS.Component.Component</a>
-<div class="inheritance">Core2D.ECS.Component.Components.TransformComponent</div>
+<div class="inheritance">Core2D.ECS.Component.Components.Transform.TransformComponent</div>
 </div>
 </div>
 <section class="description">
